# Rigid_Body_Light

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  Flow_Plot_Multi_Roller.py  LICENSE  MFS_Robin_BCs_Wall_Eval_SurfLap.py  Multi_Particle_EMmid_libmobility.py  Multi_Particle_Trap_libmobility.py  README.md  Shear_Plot.py  Single_Particle_EMRFD.py  Single_Particle_EMmid.py  Single_Particle_NoHydro.py  Single_Particle_Trap.py  bacteira.py  bacteria.py  c_rigid_obj.cpp  environment.yml  pyproject.toml  rigidbody.py  setup.py  single_particle.py  slip_plot.py  solvers.py  utils.py
.github/workflows/: build.yml
src/: Rigid.py  __init__.py  c_rigid_obj.cpp  eigen_defines.h
structures/: shell_N_12.csv  shell_N_162.csv  shell_N_2562.csv  shell_N_42.csv  shell_N_642.csv
tests/: test_import.py  test_interface.py  test_precision.py  test_wall.py  utils.py
